--- a/templates/student/student_home.html
+++ b/templates/student/student_home.html
@@ -607,7 +607,7 @@ th, td {
 
                             <a href="{% url 'notifications_student' %}" class="nav__link">
                               <i class='bx bx-bell nav__icon' ></i>
-                              <span class="nav__name">Notifications {{notif1}}</span>
+                              <span class="nav__name">Notifications {{studentNotif}}</span>
                           </a>
 
                             <a href="{% url 'student_schedule' %}" class="nav__link">
