--- a/templates/teacher/teacher_home.html
+++ b/templates/teacher/teacher_home.html
@@ -743,7 +743,7 @@ outline: none;
 
                             <a href="{% url 'notifications_teacher' %}" class="nav__link">
                               <i class='bx bx-bell nav__icon' ></i>
-                              <span class="nav__name">Notifications {{notif2}}</span>
+                              <span class="nav__name">Notifications {{teacherNotif}}</span>
                           </a>
                             
                               <a href="{% url 'teacher_view_referred_students' %}" class="nav__link">
