--- a/templates/counselor/counselor_home.html
+++ b/templates/counselor/counselor_home.html
@@ -594,7 +594,7 @@ th, td {
 
                              <a href="{% url 'notifications' %}" class="nav__link">
                               <i class='bx bx-bell nav__icon' ></i>
-                              <span class="nav__name">Notifications {{notif}}</span>
+                              <span class="nav__name">Notifications {{counselorNotif}}</span>
                           </a>
 
                             <div class="nav__dropdown">
