--- a/templates/student/notification.html
+++ b/templates/student/notification.html
@@ -210,10 +210,19 @@ outline: none;
 
 
   <tr>
-    <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}"><strong></strong> 
+    {% if notification.is_read_student == True %}
+    
+    <td><a style="color: gray; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}"><strong></strong> 
+       <b style="color: gray;">You have a Counseling Appointment on {{ notification.schedDay|date }}
+    </b></a></td>
+    <td><a style="color: gray; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td> 
+    {% else %}
+     <td><a style="color:black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}"><strong></strong> 
        <b style="color: black;">You have a Counseling Appointment on {{ notification.schedDay|date }}
     </b></a></td>
     <td><a style="color: black; font-size: 16px;" href="{% url 'student_notif_detail' notification.id %}">{{ notification.created_at|timesince }} ago</a></td> 
+    
+      {% endif %}  
   </tr>
 
 
